--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,11 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
-      - name: Verify Docker Compose Installation
-        run: docker-compose --version
+      - name: Install Maven (or Gradle if you're using it)
+        run: sudo apt-get install -y maven
+
+      - name: Build the application
+        run: mvn clean package
 
       - name: Create network if not exists
         run: |
