--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=user-service
 
 # Eureka configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
 # Server port configuration
