--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Build the application
         run: mvn clean package
 
+      - name: Create Docker Network
+        run: docker network create auth_net
+
       - name: Set up Docker Compose for User Service
         working-directory: .
         run: docker-compose up -d --build
