--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,10 +67,14 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: List files for debugging
+        run: ls -R
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r python_app/requirements.txt
+      
 
       - name: Run Python Tests
         run: |
