--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r python_app/requirements.txt
+          pip install -r scripts/requirements.txt
       
 
       - name: Run Python Tests
