Adding python scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Run Python Tests
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest --cov=./ --cov-report=xml -p no:warnings
 
       - name: Ensure Code Coverage is Sufficient
         run: |
