--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout code for User Service
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -25,22 +31,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Build with Maven (skip tests)
+        run: mvn clean package -DskipTests
+
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
-      - name: Install JDK 17
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Install Maven
-        run: sudo apt-get install -y maven
-
-      - name: Build the application
-        run: mvn clean package
+      - name: Verify Docker Compose Installation
+        run: docker-compose --version
 
       - name: Create Docker Network
         run: docker network create auth_net
@@ -58,6 +58,12 @@ jobs:
 
       - name: List running containers
         run: docker ps -a
+
+      - name: Test User Service Status
+        run: python3 scripts/test_service.py
+
+      - name: Integration Test with Curl
+        run: python3 scripts/integration_test.py
 
       - name: Run Java Tests
         run: mvn test
@@ -88,6 +94,11 @@ jobs:
         run: |
           docker stop $(docker ps -q) || true  # Stop any running containers, ignore errors if none are running
           docker rm $(docker ps -a -q) || true  # Force removal of all containers
+
+      - name: Force remove the specific network
+        run: |
+          docker network disconnect -f auth_net $(docker network inspect auth_net -f '{{range .Containers}}{{.Name}} {{end}}') || true
+          docker network rm auth_net || true
 
       - name: Final cleanup for Docker networks
         run: |
