Adding python scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
+# Application name
 spring.application.name=user-service
 
-# Eureka configuration
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
+# Example Eureka configuration to remove or comment out
+# eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+# eureka.instance.prefer-ip-address=true
+# eureka.client.register-with-eureka=true
+# eureka.client.fetch-registry=true
 
 # Server port configuration
 server.port=8080
 
-# Security configuration (example placeholders)
+# Security configuration
 spring.security.user.name=admin
 spring.security.user.password=secret
 
-# Database configuration (if needed, placeholder values)
+# Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
